# microsoft-planetary-computer-pro

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: build_geoai_docs.yml  codeql.yml
ai_workflow/mpc_aurora_workflow/: .env.example  README.md  hurricane_forecast_infra_impact.ipynb  requirements.txt
ai_workflow/mpc_aurora_workflow/deploy/: azuredeploy.json
ai_workflow/mpc_aurora_workflow/docs/: ARCHITECTURE.md
applications/storm_impact_assessment/: .env.example  .gitignore  README.md  hurricane_forecast_infra_impact.ipynb  requirements.txt
docs/geoai/: README.md  _config.yml  _toc.yml  intro.md  overview.md  requirements.txt
docs/mpc_mcp_server/: README.md
geoai/: .buildinfo  genindex.html  intro.html  objects.inv  overview.html  search.html  searchindex.js
geoai/_sources/examples/: placeholder.md
geoai/examples/: placeholder.html
geoai/models/: placeholder.html
notebooks/: GeoCatalog_Tutorial.ipynb  create-stac-items.ipynb
notebooks/databricks/: README.md  RT Sentinel2 Demo.ipynb  RT rasterio Demo.ipynb  RT rasterio RDD Demo.ipynb
tools/ingestion-troubleshooting/: README.md  stac_ingestion_troubleshooter.py
tools/javascript-sample/: .env.example  README.md  index.html  package.json  vite.config.js
tools/mpc_mcp_server/: README.md
tools/partner-app-integration/: .gitignore  ARCHITECTURE.md  QUICK_REFERENCE.md  README.md
tools/stac-export/: README.md  pyproject.toml
tools/stac-export/doc/: stac-export.md
tools/stac-export/src/stac_export/: cli.py
tools/stacforge-functions/: .gitignore  README.md
(+191 files in other folders)
